# publication-date-updater

./: .env  .gitignore  Dockerfile  Makefile  README.md  dot_env_example  pyproject.toml
.github/workflows/: docker-image.yml  image.yml
src/: main.py
src/schema/: input.py
src/tests/: api_test.py
